# ATTREQ

./: .gitignore  AGENTS.md  Agents.md  CLAUDE.md  Makefile  README.md  app.json  package-lock.json  package.json
ATTREQ-WEB-APP/test/: widget_test.dart
ATTREQ-WEB-LANDING/public/: moldcable.html
ATTREQ-WEB-main/public/: Our Team.html  contact.html  das-light.html  gravena.html  index.html  individual-brand.html
ATTREQ-flutter-app/: README.md
ATTREQ-flutter-app/lib/: Dashboard.dart  main.dart
App Redesign /: .design-canvas.state.json  ATTREQ.html  screens-auth.jsx  screens-extras.jsx  screens-rest.jsx  screens-today.jsx  shell.jsx  system-sheet.jsx  tokens.jsx
App/Backend/: .env.backup  .env.example  .pi-dev.env  Dockerfile  Makefile  PHASE3_SUMMARY.md  PHASE4_IMPLEMENTATION_COMPLETE.md  PHASE4_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
App/Backend/alembic/: env.py
App/Backend/alembic/versions/: 5a522e143506_initial_migration_create_users_table.py
App/Backend/app/: __init__.py  main.py
App/Backend/app/api/v1/: api.py  deps.py
App/Backend/app/api/v1/endpoints/: auth.py  outfits.py  recommendations.py  users.py  wardrobe.py
App/Backend/app/core/: config.py  database.py  security.py
App/Backend/app/crud/: outfit.py  user.py  wardrobe.py
App/Backend/app/models/: __init__.py  outfit.py  user.py  wardrobe.py
App/Backend/app/schemas/: __init__.py  outfit.py  recommendation.py  user.py  wardrobe.py
App/Backend/app/services/ai/: __init__.py  background_removal.py  clothing_detection.py  embeddings.py  gemini_classifier.py  schema_mapper.py
App/Backend/app/services/cache/: __init__.py  redis_client.py
App/Backend/app/services/recommendation/: __init__.py  algorithm.py
App/Backend/app/services/storage/: __init__.py  file_handler.py
App/Backend/app/workers/: batch_image_processor.py  image_processor.py
App/Backend/scripts/: setup_uploads_dir.sh  test_recommendations.sh  test_wardrobe_api.sh
App/Frontend/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json
Docs/: Project Overview.md  backend-tasks-v1.md  frontend-tasks-v1.md
Docs/Implementation Plan/: 01-overview.md  02-architecture.md  03-infrastructure.md  04-backend.md  05-ai-ml-pipeline.md  07-authentication.md  08-testing.md  09-deployment.md  10-development-workflow.md
Extras/ATTREQ-MODEL/: untitled.md
Extras/ATTREQ-WEB-APP/: pubspec.yaml
Extras/ATTREQ-WEB-LANDING/: .firebaserc
apps/api/: .dockerignore  .env.example  .gitignore  .pi-dev.env  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/landing/: next.config.ts  package-lock.json  package.json
apps/mobile/: README.md  app.json  babel.config.js  jest.config.js  jest.react-native-env.js  jest.setup.ts  package.json  tailwind.config.js
apps/web/: README.md  next.config.ts  package-lock.json  package.json
attreq/: .metadata
attreq/lib/: Profile.dart  login.dart
attreq/web/: index.html  manifest.json
docs/: README.md
docs/00-current-status/: 00-current-status.md  01-task-tracker.md  02-next-phase-tickets.md
(+191 files in other folders)
