[project]
name = "attreq-backend"
version = "0.1.0"
description = "ATTREQ Backend API - AI-Powered Attribute Requirement Analysis Platform"
requires-python = ">=3.11"

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
indent-width = 4

# Assume Python 3.11
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "*.egg-info",
    "alembic/versions",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "B",     # flake8-bugbear
    "I",     # isort
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "TCH",   # flake8-type-checking
    "ASYNC", # flake8-async
]

# Disable specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function calls in argument defaults (FastAPI Depends pattern)
    "UP007",  # Use X | Y for type annotations (Optional is more readable)
    "RET504", # Unnecessary variable assignment before return
]

# Allow automatic fixes for all rules
fixable = ["ALL"]
unfixable = []

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # Allow unused imports and imports not at top
"tests/**/*.py" = ["S101", "PLR2004"]  # Allow assert statements and magic values in tests
"alembic/**/*.py" = ["E402", "F401"]  # Allow imports not at top in alembic
"app/main.py" = ["E402"]  # Allow imports after settings initialization

# Import sorting configuration
[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
split-on-trailing-comma = false

# Configure specific linter plugins
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel", "sqlalchemy.orm.DeclarativeBase"]

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

# Formatter configuration
[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"

# Format code examples in docstrings
docstring-code-format = true
docstring-code-line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

